force-app/main/default/objects/FS_Proyecto__c/fields/FS_Cliente__c.field-meta.xml
<CustomField>
    <fullName>FS_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proyectos</relationshipLabel>
    <relationshipName>Proyectos</relationshipName>
    <type>Lookup</type>
</CustomField>