force-app/main/default/objects/FS_Proyecto__c/fields/FS_Es_Pre_contratado__c.field-meta.xml
<CustomField>
    <fullName>FS_Es_Pre_contratado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Es Pre-contratado?</label>
    <type>Checkbox</type>
</CustomField>