force-app/main/default/objects/FS_Proyecto__c/fields/FS_Fecha_Inicio_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>FS_Fecha_Inicio_Proyecto__c</fullName>
    <label>Fecha Inicio Proyecto</label>
    <type>Date</type>
</CustomField>