force-app/main/default/objects/FS_Proyecto__c/fields/FS_Numero_de_dias_contratados__c.field-meta.xml
<CustomField>
    <fullName>FS_Numero_de_dias_contratados__c</fullName>
    <label>Número de días contratados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>