force-app/main/default/objects/FS_Proyecto__c/fields/FS_Saldo_de_dias__c.field-meta.xml
<CustomField>
    <fullName>FS_Saldo_de_dias__c</fullName>
    <formula>FS_Numero_de_dias_contratados__c - FS_Numero_de_dias_consumidos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo de días</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>