force-app/main/default/objects/FS_Proyecto__c/fields/FS_Tarifa_Dias_Hombre__c.field-meta.xml
<CustomField>
    <fullName>FS_Tarifa_Dias_Hombre__c</fullName>
    <label>Tarifa Dias/Hombre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>