force-app/main/default/objects/FS_Proyecto__c/fields/FS_Tipo_de_Caso__c.field-meta.xml
<CustomField>
    <fullName>FS_Tipo_de_Caso__c</fullName>
    <label>Tipo de Caso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Consulta</fullName>
            </value>
            <value>
                <fullName>Incidente</fullName>
            </value>
            <value>
                <fullName>Requerimiento</fullName>
            </value>
            <value>
                <fullName>Solicitud (Falla Operativa)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>