force-app/main/default/objects/FS_Proyecto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FS_Cliente__c</columns>
    <columns>FS_Es_Pre_contratado__c</columns>
    <columns>FS_Fecha_Inicio_Proyecto__c</columns>
    <columns>FS_Fecha_Fin_Proyecto__c</columns>
    <columns>FS_Tarifa_Dias_Hombre__c</columns>
    <columns>FS_Tipo_de_Caso__c</columns>
    <columns>FS_Numero_de_dias_contratados__c</columns>
    <columns>FS_Numero_de_dias_consumidos__c</columns>
    <columns>FS_Saldo_de_dias__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>